--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,6 @@ links:
     url:          /about
 highlighter:      pygments
 permalink:        pretty
-markdown:         redcarpet
+markdown:         kramdown
 redcarpet:
   extensions:     ["tables"]
