tls4e after reading.

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@ links:
     url:          /quiz
   - name:         关于
     url:          /about
-highlighter:      pygments
+highlighter: rouge
+input:  GFM
 permalink:        pretty
 markdown:         kramdown
 redcarpet:
